Source/JavaScriptCore/runtime/IntlDurationFormat.cpp
@@ -322,6 +322,24 @@ struct Element {
     std::unique_ptr<UFormattedNumber, ICUDeleter<unumf_closeResult>> m_formattedNumber;
 };
 
+enum class DurationSignType : uint8_t {
+    Negative,
+    Positive,
+    Zero,
+};
+
+// https://tc39.es/proposal-intl-duration-format/#sec-durationsign
+static DurationSignType getDurationSign(ISO8601::Duration duration)
+{
+    for (auto value : duration) {
+        if (value < 0)
+            return DurationSignType::Negative;
+        if (value > 0)
+            return DurationSignType::Positive;
+    }
+    return DurationSignType::Zero;
+}
+
 static Vector<Element> collectElements(JSGlobalObject* globalObject, const IntlDurationFormat* durationFormat, ISO8601::Duration duration)
 {
     // https://tc39.es/proposal-intl-duration-format/#sec-partitiondurationformatpattern
@@ -330,8 +348,10 @@ static Vector<Element> collectElements(JSGlobalObject* globalObject, const IntlD
     auto scope = DECLARE_THROW_SCOPE(vm);
 
     bool done = false;
+    bool needsSignDisplay = false;
     String separator;
     Vector<Element> elements;
+    std::optional<DurationSignType> durationSign;
     for (unsigned index = 0; index < numberOfTemporalUnits && !done; ++index) {
         TemporalUnit unit = static_cast<TemporalUnit>(index);
         auto unitData = durationFormat->units()[index];
@@ -405,6 +425,18 @@ static Vector<Element> collectElements(JSGlobalObject* globalObject, const IntlD
 
                 return String(WTFMove(buffer));
             };
+
+            // https://github.com/unicode-org/icu/blob/main/docs/userguide/format_parse/numbers/skeletons.md#sign-display
+            if (needsSignDisplay)
+                skeletonBuilder.append(" +_"_s);
+            else if (!value) {
+                if (!durationSign)
+                    durationSign = getDurationSign(duration);
+                if (durationSign == DurationSignType::Negative) {
+                    value = -0.0;
+                    needsSignDisplay = true;
+                }
+            }
 
             auto formatDouble = [&](const String& skeleton) -> std::unique_ptr<UFormattedNumber, ICUDeleter<unumf_closeResult>> {
                 auto scope = DECLARE_THROW_SCOPE(vm);
@@ -492,6 +524,8 @@ static Vector<Element> collectElements(JSGlobalObject* globalObject, const IntlD
                 break;
             }
             }
+            if (value)
+                needsSignDisplay = true;
         }
     }
 
